--- a/source/scss/blocks/_services-section.scss
+++ b/source/scss/blocks/_services-section.scss
@@ -1,6 +1,5 @@
 .services-section {
     position: relative;
-    overflow-x: hidden;
     padding: clamp(50px, 6.25vw, 90px) 0;
     background-color: rgba(var(--bg-a),1.0);
 
@@ -51,7 +50,6 @@
         position: sticky;
         top: 30px;
         flex-basis: 50%;
-        // padding-top: clamp(150px, 11.806vw, 200px);
         display: flex;
         flex-direction: column;
         gap: 25px;
@@ -88,6 +86,7 @@
     }
 
     &__lists {
+        overflow: hidden;
         flex-basis: 50%;
         display: flex;
         flex-direction: column;
