--- a/source/scss/general/_global.scss
+++ b/source/scss/general/_global.scss
@@ -18,7 +18,6 @@ body {
   color: rgba(var(--cl-a),1.0);
 
   background-color: var(--body-bg);
-  overflow-x: hidden;
 }
 
 main {
